Frankbelford/uatv1ba/force-app/main/default/objects/Worker_Rating__c/Worker_Rating__c.object-meta.xml
<CustomObject>
    <label>Worker Rating</label>
    <nameField>
        <displayFormat>WR-{000000}</displayFormat>
        <label>Worker Rating Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Worker Ratings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>