Frankbelford/uatv1ba/force-app/main/default/objects/Worker_Rating__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Worker Ratings</relationshipLabel>
    <relationshipName>Worker_Ratings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>