Frankbelford/uatv1ba/force-app/main/default/objects/Worker_Rating__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <formula>IF( ISPICKVAL( Shift__r.Worker_Rating__c , &quot;1&quot;),1,
IF( ISPICKVAL( Shift__r.Worker_Rating__c , &quot;2&quot;),2,
IF( ISPICKVAL( Shift__r.Worker_Rating__c , &quot;3&quot;),3,4)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>