Frankbelford/uatv1ba/force-app/main/default/objects/Worker_Rating__c/fields/Shift__c.field-meta.xml
<CustomField>
    <fullName>Shift__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shift</label>
    <referenceTo>sirenum__Shift__c</referenceTo>
    <relationshipLabel>Worker Ratings</relationshipLabel>
    <relationshipName>Worker_Ratings</relationshipName>
    <type>Lookup</type>
</CustomField>